# uuidtools

./: Cargo.toml
.github/workflows/: publish.yml
src/: args.rs  cli.rs  lib.rs  main.rs  utils.rs
