[package]
name = "uuidtools"
authors = ["Dandraghas dandraghas@proton.me"]
description = "Simple cli tool for generating uuids"
license     = "GPL-3.0-or-later"
repository  = "https://github.com/Dandraghas/uuidtools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.5", features = ["full"] }
uuid = {version = "1.6.1", features = ["v1", "v3", "v4", "v5"] }

[profile.release]
codegen-units = 1
lto = true
